Fix body overflow issue

--- a/src/components/Slider/o-slider.scss
+++ b/src/components/Slider/o-slider.scss
@@ -27,6 +27,14 @@ $itemWidth: 30vw;
 		height: 40vw;
 		overflow: hidden;
 
+		img {
+			transition: $transition-zoom;
+		}
+
+		&:hover img {
+			transform: scale(1.2);
+		}
+
 		@include media("<=tablet") {
 			width: 40vw;
 			height: 50vw;
